Bump datastar and fix coordinates in examples